--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td><img src="https://github.com/KeeleyElliot89/CV/blob/main/Keeley-modified.png" width="200" height="200" alt="Keeley's profile picture"></td>
+      <td><img src="https://github.com/KeeleyElliot89/CV/blob/main/Keeley-modified.png?raw=true" width="200" height="200" alt="Keeley's profile picture"></td>
       <td>
         <h1>Keeley Elliot</h1>
         <p><em>Stay at home <strong>mum</strong>.</em></p>
