--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td><img src="https://scontent-lcy1-1.xx.fbcdn.net/v/t1.18169-9/13124934_10154097870090050_8294455352639661555_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=174925&_nc_ohc=OVq9bWNspdMAX95jWy9&_nc_ht=scontent-lcy1-1.xx&oh=00_AT9mCfDRIHIaOgCW7FqaxtpTIp55ZwA1BGlkHcgb-kaxGw&oe=62090158" width="200" height="200" alt="Keeley's profile picture"></td>
+      <td><img src="https://github.com/KeeleyElliot89/CV/blob/main/Keeley-modified.png?raw=true" alt="Keeley Elliot"></td>
       <td>
         <h1>Keeley Elliot</h1>
         <p><em>Stay at home <strong>mum</strong>.</em></p>
